--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dashgo",
   "version": "0.1.0",
-  "homepage": "dashgo/",
+  "homepage": "./",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
